// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseStoriesFile parses story file fixtures/Children.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Children prop, children content",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 8,
        },
        "start": Object {
          "column": 0,
          "line": 8,
        },
      },
      "name": "Children prop, empty body",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "name": "Children prop, no body",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 12,
        },
      },
      "name": "No children prop, children content",
      "nameForId": undefined,
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file fixtures/Spread.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 15,
        },
        "start": Object {
          "column": 0,
          "line": 15,
        },
      },
      "name": undefined,
      "nameForId": undefined,
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/autoTitle/csf/EmptyDefaultExport.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 17,
        "line": 5,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 20,
          "index": 169,
          "line": 9,
        },
        "start": Position {
          "column": 13,
          "index": 162,
          "line": 9,
        },
      },
      "name": "Primary",
      "nameForId": "Primary",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/autoTitle/csf/NoDefaultExport.stories.js 1`] = `undefined`;

exports[`parseStoriesFile parses story file project/src/autoTitle/csf/nested/WithoutTitle.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 20,
          "index": 194,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "index": 187,
          "line": 11,
        },
      },
      "name": "Primary",
      "nameForId": "Primary",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/autoTitle/mdx/MdxMeta.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": undefined,
  },
  "stories": Array [],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/autoTitle/mdx/MdxMetaAndStory.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "name": "Primary",
      "nameForId": undefined,
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/autoTitle/mdx/MdxStory.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": undefined,
    "title": undefined,
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "name": "Primary",
      "nameForId": undefined,
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/autoTitle/mdx/PlainMarkdown.stories.mdx 1`] = `undefined`;

exports[`parseStoriesFile parses story file project/src/stories/BasicCsf.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 11,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/Basic CSF",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 20,
          "index": 252,
          "line": 15,
        },
        "start": Position {
          "column": 13,
          "index": 245,
          "line": 15,
        },
      },
      "name": "Primary",
      "nameForId": "Primary",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 22,
          "index": 340,
          "line": 20,
        },
        "start": Position {
          "column": 13,
          "index": 331,
          "line": 20,
        },
      },
      "name": "Secondary",
      "nameForId": "Secondary",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 18,
          "index": 428,
          "line": 25,
        },
        "start": Position {
          "column": 13,
          "index": 423,
          "line": 25,
        },
      },
      "name": "Large",
      "nameForId": "Large",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 18,
          "index": 520,
          "line": 31,
        },
        "start": Position {
          "column": 13,
          "index": 515,
          "line": 31,
        },
      },
      "name": "Small",
      "nameForId": "Small",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CsfV1.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/CSF v1",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 24,
          "index": 72,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 61,
          "line": 5,
        },
      },
      "name": "Renamed via non-hoisted story",
      "nameForId": "V 1 Story Name",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 26,
          "index": 243,
          "line": 11,
        },
        "start": Position {
          "column": 13,
          "index": 230,
          "line": 11,
        },
      },
      "name": "v2 name override",
      "nameForId": "V 2 V 1 Story Name",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 31,
          "index": 466,
          "line": 18,
        },
        "start": Position {
          "column": 13,
          "index": 448,
          "line": 18,
        },
      },
      "name": "v1 name should be used",
      "nameForId": "V 2 V 1 Story Name Empty",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CsfWithMdx.stories.js 1`] = `undefined`;

exports[`parseStoriesFile parses story file project/src/stories/CsfWithMdx.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "title": "Example/MDX importing CSF",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 11,
        },
        "start": Object {
          "column": 0,
          "line": 11,
        },
      },
      "name": "Basic",
      "nameForId": "Basic",
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 21,
        },
        "start": Object {
          "column": 0,
          "line": 21,
        },
      },
      "name": "Story name from MDX",
      "nameForId": "Basic 2",
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 25,
        },
        "start": Object {
          "column": 0,
          "line": 25,
        },
      },
      "name": "Basic 3",
      "nameForId": "Basic 3",
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CustomId.stories.js 1`] = `
Object {
  "meta": Object {
    "id": "manually-specified-csf-story-id",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 4,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/Custom ID CSF",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 18,
          "index": 114,
          "line": 6,
        },
        "start": Position {
          "column": 13,
          "index": 109,
          "line": 6,
        },
      },
      "name": "Story",
      "nameForId": "Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CustomId.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": "manually-specified-mdx-id",
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": "Example/Custom ID MDX",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 7,
        },
        "start": Object {
          "column": 0,
          "line": 7,
        },
      },
      "name": "Story",
      "nameForId": undefined,
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/CustomName.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 12,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/Custom Name",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 23,
          "index": 292,
          "line": 16,
        },
        "start": Position {
          "column": 13,
          "index": 282,
          "line": 16,
        },
      },
      "name": "Custom story name",
      "nameForId": "Custom Name",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 23,
          "index": 453,
          "line": 22,
        },
        "start": Position {
          "column": 13,
          "index": 443,
          "line": 22,
        },
      },
      "name": "Custom story name override",
      "nameForId": "Overridden",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 29,
          "index": 682,
          "line": 29,
        },
        "start": Position {
          "column": 13,
          "index": 666,
          "line": 29,
        },
      },
      "name": "Custom story name var",
      "nameForId": "Named Via Variable",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 29,
          "index": 898,
          "line": 36,
        },
        "start": Position {
          "column": 13,
          "index": 882,
          "line": 36,
        },
      },
      "name": "Custom story name var in template string",
      "nameForId": "Interpolated Name",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 22,
          "index": 1007,
          "line": 39,
        },
        "start": Position {
          "column": 13,
          "index": 998,
          "line": 39,
        },
      },
      "name": "Empty Name",
      "nameForId": "Empty Name",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 30,
          "index": 1086,
          "line": 42,
        },
        "start": Position {
          "column": 13,
          "index": 1069,
          "line": 42,
        },
      },
      "name": "     Leading whitespace",
      "nameForId": "Leading Whitespace",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/DeepTree.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 6,
      },
      "start": Object {
        "column": 15,
        "line": 3,
      },
    },
    "title": "Example/Deep/Tree/With/Several/Kinds",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 18,
          "index": 207,
          "line": 10,
        },
        "start": Position {
          "column": 13,
          "index": 202,
          "line": 10,
        },
      },
      "name": "Story",
      "nameForId": "Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/DocsOnly.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": "Example/MDX Docs Only",
  },
  "stories": Array [],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/DocsOnlyTop.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "title": "MDX Docs at top level",
  },
  "stories": Array [],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Excluded.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 4,
      },
    },
    "title": "Test/Exclusions/Excluded",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 24,
          "index": 89,
          "line": 2,
        },
        "start": Position {
          "column": 13,
          "index": 78,
          "line": 2,
        },
      },
      "name": "Other Export",
      "nameForId": "Other Export",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/ExportStyles.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 11,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/Export Styles",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 18,
          "index": 255,
          "line": 15,
        },
        "start": Position {
          "column": 6,
          "index": 243,
          "line": 15,
        },
      },
      "name": "Normal Export",
      "nameForId": "Normal Export",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 16,
          "index": 354,
          "line": 20,
        },
        "start": Position {
          "column": 6,
          "index": 344,
          "line": 20,
        },
      },
      "name": "Alternative Export Name",
      "nameForId": "Alternative Export Name",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 29,
          "index": 469,
          "line": 25,
        },
        "start": Position {
          "column": 6,
          "index": 446,
          "line": 25,
        },
      },
      "name": "Override name 3",
      "nameForId": "Export Name Overridden",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Form.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 5,
      },
      "start": Object {
        "column": 15,
        "line": 3,
      },
    },
    "title": "Example/Form",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 17,
          "index": 105,
          "line": 7,
        },
        "start": Position {
          "column": 13,
          "index": 101,
          "line": 7,
        },
      },
      "name": "Form",
      "nameForId": "Form",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Hoisting.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/Hoisting",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 21,
          "index": 131,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 123,
          "line": 3,
        },
      },
      "name": "Hoisting",
      "nameForId": "Hoisting",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Included.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 4,
      },
    },
    "title": "Test/Exclusions/Included",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 27,
          "index": 27,
          "line": 1,
        },
        "start": Position {
          "column": 13,
          "index": 13,
          "line": 1,
        },
      },
      "name": "Included Export",
      "nameForId": "Included Export",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/JsxExtension.stories.jsx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/JSX extension",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 18,
          "index": 73,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 68,
          "line": 5,
        },
      },
      "name": "Story",
      "nameForId": "Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/MdxWithStories.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "title": "Example/MDX with Stories",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 10,
        },
      },
      "name": "MDX first story",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 14,
        },
        "start": Object {
          "column": 0,
          "line": 14,
        },
      },
      "name": "MDX second story",
      "nameForId": undefined,
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 18,
        },
        "start": Object {
          "column": 0,
          "line": 18,
        },
      },
      "name": "MDX Story 3",
      "nameForId": undefined,
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/MdxWithStoriesTop.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "title": "MDX with stories, top",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "name": "MDX with stories, top",
      "nameForId": undefined,
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/MergeOne.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/Merge",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 16,
          "index": 63,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 60,
          "line": 5,
        },
      },
      "name": "One",
      "nameForId": "One",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/MergeTwo.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 15,
        "line": 1,
      },
    },
    "title": "Example/Merge",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 16,
          "index": 63,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 60,
          "line": 5,
        },
      },
      "name": "Two",
      "nameForId": "Two",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Precedence.stories.mdx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 0,
        "line": 4,
      },
      "start": Object {
        "column": 0,
        "line": 4,
      },
    },
    "title": "Example/Precedence",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 20,
        },
        "start": Object {
          "column": 0,
          "line": 20,
        },
      },
      "name": "Story with name, story, body",
      "nameForId": "Small",
    },
    Object {
      "location": Object {
        "end": Object {
          "column": 0,
          "line": 26,
        },
        "start": Object {
          "column": 0,
          "line": 26,
        },
      },
      "name": "Story with name, body",
      "nameForId": undefined,
    },
  ],
  "type": "mdx",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/SameName.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/With Same Name",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 21,
          "index": 224,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "index": 216,
          "line": 12,
        },
      },
      "name": "Same Name",
      "nameForId": "Same Name",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/SameNameChild.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Example/With Same Name/Same Name",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 24,
          "index": 237,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "index": 226,
          "line": 12,
        },
      },
      "name": "Nested Story",
      "nameForId": "Nested Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/StoryDeclarations.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
      },
      "start": Object {
        "column": 6,
        "line": 1,
      },
    },
    "title": "Test/Story Declarations",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 28,
          "index": 105,
          "line": 7,
        },
        "start": Position {
          "column": 13,
          "index": 90,
          "line": 7,
        },
      },
      "name": "Const Declarator",
      "nameForId": "Const Declarator",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 24,
          "index": 169,
          "line": 9,
        },
        "start": Position {
          "column": 6,
          "index": 151,
          "line": 9,
        },
      },
      "name": "Separate Declarator",
      "nameForId": "Separate Declarator",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 25,
          "index": 236,
          "line": 10,
        },
        "start": Position {
          "column": 6,
          "index": 217,
          "line": 10,
        },
      },
      "name": "Separate declarator with story name",
      "nameForId": "Separate Declarator 2",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 24,
          "index": 448,
          "line": 15,
        },
        "start": Position {
          "column": 13,
          "index": 437,
          "line": 15,
        },
      },
      "name": "Multiple One",
      "nameForId": "Multiple One",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 13,
          "index": 505,
          "line": 16,
        },
        "start": Position {
          "column": 2,
          "index": 494,
          "line": 16,
        },
      },
      "name": "Multiple two (given name)",
      "nameForId": "Multiple Two",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 29,
          "index": 633,
          "line": 20,
        },
        "start": Position {
          "column": 16,
          "index": 620,
          "line": 20,
        },
      },
      "name": "Renamed Function Story",
      "nameForId": "Function Story",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 30,
          "index": 768,
          "line": 25,
        },
        "start": Position {
          "column": 9,
          "index": 747,
          "line": 25,
        },
      },
      "name": "Separate Function Story",
      "nameForId": "Separate Function Story",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 31,
          "index": 853,
          "line": 29,
        },
        "start": Position {
          "column": 9,
          "index": 831,
          "line": 29,
        },
      },
      "name": "Separate function story with story name",
      "nameForId": "Separate Function Story 2",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TitleInterpolation.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 10,
      },
      "start": Object {
        "column": 15,
        "line": 7,
      },
    },
    "title": "Example/Title Interpolation",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 20,
          "index": 271,
          "line": 14,
        },
        "start": Position {
          "column": 13,
          "index": 264,
          "line": 14,
        },
      },
      "name": "Primary",
      "nameForId": "Primary",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/Top.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Top",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 26,
          "index": 210,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "index": 197,
          "line": 12,
        },
      },
      "name": "Top Level Story",
      "nameForId": "Top Level Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TopHoisted.stories.js 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Top Hoisted",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 23,
          "index": 215,
          "line": 12,
        },
        "start": Position {
          "column": 13,
          "index": 205,
          "line": 12,
        },
      },
      "name": "Top Hoisted",
      "nameForId": "Top Hoisted",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TypeScript.stories.tsx 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 9,
        "line": 19,
      },
      "start": Object {
        "column": 15,
        "line": 17,
      },
    },
    "title": "Test/TypeScript/Sample",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 28,
          "index": 77,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 62,
          "line": 3,
        },
      },
      "name": "Type Script Story",
      "nameForId": "Type Script Story",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 40,
          "index": 150,
          "line": 5,
        },
        "start": Position {
          "column": 13,
          "index": 123,
          "line": 5,
        },
      },
      "name": "Type Script Typed Story",
      "nameForId": "Type Script Typed Story",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 51,
          "index": 255,
          "line": 9,
        },
        "start": Position {
          "column": 13,
          "index": 217,
          "line": 9,
        },
      },
      "name": "Type Script Typed Generic Story",
      "nameForId": "Type Script Typed Generic Story",
    },
    Object {
      "location": Object {
        "end": Position {
          "column": 41,
          "index": 362,
          "line": 13,
        },
        "start": Position {
          "column": 13,
          "index": 334,
          "line": 13,
        },
      },
      "name": "Type Script Type Assertion Story",
      "nameForId": "Type Script Type Assertion Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TypeScriptAsMeta.stories.ts 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 9,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 5,
      },
    },
    "title": "Test/TypeScript/Default as Meta",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 28,
          "index": 70,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 55,
          "line": 3,
        },
      },
      "name": "Type Script Story",
      "nameForId": "Type Script Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TypeScriptIdentifier.stories.ts 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 6,
        "line": 5,
      },
    },
    "title": "Test/TypeScript/Typed Identifier",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 28,
          "index": 70,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 55,
          "line": 3,
        },
      },
      "name": "Type Script Story",
      "nameForId": "Type Script Story",
    },
  ],
  "type": "csf",
}
`;

exports[`parseStoriesFile parses story file project/src/stories/TypeScriptIdentifierAsMeta.stories.ts 1`] = `
Object {
  "meta": Object {
    "id": undefined,
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
      },
      "start": Object {
        "column": 6,
        "line": 6,
      },
    },
    "title": "Test/TypeScript/Identifier Exported as Meta",
  },
  "stories": Array [
    Object {
      "location": Object {
        "end": Position {
          "column": 28,
          "index": 70,
          "line": 3,
        },
        "start": Position {
          "column": 13,
          "index": 55,
          "line": 3,
        },
      },
      "name": "Type Script Story",
      "nameForId": "Type Script Story",
    },
  ],
  "type": "csf",
}
`;
